--- a/MusicRecorder/MusicRecorder.csproj
+++ b/MusicRecorder/MusicRecorder.csproj
@@ -142,6 +142,15 @@
   <ItemGroup>
     <AndroidAsset Include="Assets\Track 3.m4a" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\Track 2.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\Track 1.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\Track 3.wav" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Android.Support.Annotations.27.0.2.1\build\MonoAndroid81\Xamarin.Android.Support.Annotations.targets" Condition="Exists('..\packages\Xamarin.Android.Support.Annotations.27.0.2.1\build\MonoAndroid81\Xamarin.Android.Support.Annotations.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
